cluster/overlays/zahariev.com/changedetection/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: changedetection
  namespace: changedetection
spec:
  template:
    spec:
      containers:
      - name: changedetection
