cluster/overlays/zahariev.com/changedetection/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changedetection
  namespace: changedetection
spec:
  rules:
  - host: changedetection.zahariev.com
  tls:
  - hosts:
    - changedetection.zahariev.com
    secretName: changedetection-tls
